kube/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: consumer
  name: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consumer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/mastersinvestigation-network: "true"
        io.kompose.service: consumer
    spec:
      containers:
        - image: subscriber
          name: consumer
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /app/logs
              name: consumer-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /mnt/c/Users/hoooc/source/repos/MastersInvestigation/C:\Users\hoooc\Desktop\subscriberlogs
          name: consumer-hostpath0
status: {}
