kube/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/mastersinvestigation-network: "true"
        io.kompose.service: grafana
    spec:
      containers:
        - image: grafana/grafana
          name: grafana
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /etc/grafana/provisioning/datasources
              name: grafana-hostpath0
            - mountPath: /etc/grafana/provisioning/dashboards/main.yaml
              name: grafana-hostpath1
            - mountPath: /var/lib/grafana/dashboards
              name: grafana-hostpath2
            - mountPath: /var/lib/grafana
              name: grafana-hostpath3
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /mnt/c/Users/hoooc/source/repos/MastersInvestigation/grafana/provisioning/datasources
          name: grafana-hostpath0
        - hostPath:
            path: /mnt/c/Users/hoooc/source/repos/MastersInvestigation/grafana/dashboard.yaml
          name: grafana-hostpath1
        - hostPath:
            path: /mnt/c/Users/hoooc/source/repos/MastersInvestigation/grafana/provisioning/dashboards
          name: grafana-hostpath2
        - hostPath:
            path: /mnt/c/Users/hoooc/source/repos/MastersInvestigation/grafana-data
          name: grafana-hostpath3
status: {}
