kube/publisher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: publisher
  name: publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: publisher
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/mastersinvestigation-network: "true"
        io.kompose.service: publisher
    spec:
      containers:
        - image: publisher
          name: publisher
          ports:
            - containerPort: 1234
          resources: {}
      restartPolicy: Always
status: {}
