kube/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/mastersinvestigation-network: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_NODENAME
              value: rabbitmq@rabbitmq
          image: rabbitmq:management
          name: rabbitmq
          ports:
            - containerPort: 15672
            - containerPort: 5672
            - containerPort: 15692
            - containerPort: 5552
            - containerPort: 5671
          resources: {}
      hostname: rabbitmq
      restartPolicy: Always
status: {}
