kube/publisher-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: publisher
  name: publisher
spec:
  ports:
    - name: "1234"
      port: 1234
      targetPort: 1234
  selector:
    io.kompose.service: publisher
status:
  loadBalancer: {}
