kube/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  ports:
    - name: "15672"
      port: 15672
      targetPort: 15672
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "15692"
      port: 15692
      targetPort: 15692
    - name: "5552"
      port: 5552
      targetPort: 5552
    - name: "5671"
      port: 5671
      targetPort: 5671
  selector:
    io.kompose.service: rabbitmq
status:
  loadBalancer: {}
