kube/streampublisher-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: streampublisher
  name: streampublisher
spec:
  ports:
    - name: "1235"
      port: 1235
      targetPort: 1235
  selector:
    io.kompose.service: streampublisher
status:
  loadBalancer: {}
