kube/streamsubscriber-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: streamsubscriber
  name: streamsubscriber
spec:
  ports:
    - name: "1111"
      port: 1111
      targetPort: 1111
  selector:
    io.kompose.service: streamsubscriber
status:
  loadBalancer: {}
