kube/mastersinvestigation-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mastersinvestigation-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mastersinvestigation-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mastersinvestigation-network: "true"
